deployment/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: seol
  name: seol-ingrses
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: chat-live
            port:
              number: 8080
